--- a/_data/sidebars/sidebar.yml
+++ b/_data/sidebars/sidebar.yml
@@ -26,14 +26,14 @@ entries:
           - title: "Code of Conduct"
             url: "/code-of-conduct.html"
             output: "web"
-      - title: "vscode-ltex / coc-ltex"
+      - title: "vscode-ltex-plus / coc-ltex-plus"
         output: "web"
         folderitems:
-          - title: "Installation &amp; Usage (vscode-ltex)"
-            url: "/vscode-ltex-plus/installation-usage-vscode-ltex.html"
+          - title: "Installation &amp; Usage (vscode-ltex-plus)"
+            url: "/vscode-ltex-plus/installation-usage-vscode-ltex-plus.html"
             output: "web"
-          - title: "Installation &amp; Usage (coc-ltex)"
-            url: "/vscode-ltex-plus/installation-usage-coc-ltex.html"
+          - title: "Installation &amp; Usage (coc-ltex-plus)"
+            url: "/vscode-ltex-plus/installation-usage-coc-ltex-plus.html"
             output: "web"
           - title: "Setting Scopes &amp; Files"
             url: "/vscode-ltex-plus/setting-scopes-files.html"
@@ -47,21 +47,21 @@ entries:
           - title: "Contributing"
             url: "/vscode-ltex-plus/contributing.html"
             output: "web"
-      - title: "ltex-ls (LT<sub>E</sub>X LS)"
+      - title: "ltex-ls-plus (LT<sub>E</sub>X LS)"
         output: "web"
         folderitems:
           - title: "Installation"
-            url: "/ltex-ls/installation.html"
+            url: "/ltex-ls-plus/installation.html"
             output: "web"
           - title: "Server Usage"
-            url: "/ltex-ls/server-usage.html"
+            url: "/ltex-ls-plus/server-usage.html"
             output: "web"
           - title: "CLI Usage"
-            url: "/ltex-ls/cli-usage.html"
+            url: "/ltex-ls-plus/cli-usage.html"
             output: "web"
           - title: "Changelog"
-            url: "/ltex-ls/changelog.html"
+            url: "/ltex-ls-plus/changelog.html"
             output: "web"
           - title: "Contributing"
-            url: "/ltex-ls/contributing.html"
+            url: "/ltex-ls-plus/contributing.html"
             output: "web"
