--- a/_data/sidebars/sidebar.yml
+++ b/_data/sidebars/sidebar.yml
@@ -1,5 +1,5 @@
 entries:
-  - title: "LT<sub>E</sub>X 13.1.0 / 15.2.0"
+  - title: "LT<sub>E</sub>X+"
     folders:
       - title: "General Information"
         output: "web"
@@ -46,7 +46,7 @@ entries:
           - title: "Contributing"
             url: "/vscode-ltex-plus/contributing.html"
             output: "web"
-      - title: "ltex-ls-plus (LT<sub>E</sub>X LS)"
+      - title: "ltex-ls-plus (LT<sub>E</sub>X+ LS)"
         output: "web"
         folderitems:
           - title: "Installation"
